--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prismjs": "^1.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-simple-code-editor": "^0.11.0"
+    "react-simple-code-editor": "^0.11.0",
+    "remark-gfm": "^3.0.1"
   }
 }
